# IAV_Classification

./: .gitignore  README.md  pyproject.toml
IAV_Classification/: cv.py  data.py  main.py  ml.py  model.py  utils.py
Püntener_Classification/Püntener/: cv.py  data.py  main.py  ml.py  model.py
Püntener_Classification/infa/: cv.py  data.py  main.py  mcc.py  ml.py  model.py
blinkognition/: cv.py  data.py  main.py  ml.py  model.py
data/: all_traces_norm.tsv  all_traces_norm_by_label_video.tsv  all_traces_norm_by_label_video_test.tsv  all_traces_norm_by_video_imputation_without_background.tsv  all_traces_norm_by_video_imputation_without_background_test.tsv  all_traces_norm_imputation.tsv  all_traces_norm_imputation_test.tsv  all_traces_norm_imputation_without_background.tsv  all_traces_norm_imputation_without_background_test.tsv  all_traces_norm_imputation_without_background_train_val.tsv  all_traces_norm_test.tsv  all_traces_test.tsv  all_traces_train_val.tsv
data_blinko/: E1_E2_zscored_filtered_traces_dataset_1x_61TPs.tsv  E1_E2_zscored_filtered_traces_dataset_1x_61TPs_test.tsv  E1_E2_zscored_filtered_traces_dataset_1x_61TPs_train_val.tsv
models/: DIOR_SS13_Kinga.keras
notebooks/: 003_Peak_Feature_Extraction.ipynb  004_Püntener_Dataset_processed_traces.ipynb  005_XGBoost_and_Feature_Importance.ipynb  all_traces.tsv
